@startuml

enum MuscularGroup{
   Chest
   Shoulder
   Back
   Trapeze
   Biceps
   Triceps
   Leg
   Twin
   Abs

  + displayName : String

  + getText() : String
}

class Exercise {
    + name : String
    + mode : String
    + imgURI : Int?
}

class ExerciseRutine {
    + sets : Int
    + minReps : Int
    + maxReps : Int

  + isReal() : Boolean
}

class Rutine {
    + name : String
}

class ExerciseSet {
    + weight : Double
    + reps : Int
    + effort : Int
}

class TrainingExercise {
    + date : LocalDate?
}

class Training {
    + date : LocalDate
    + modifiedRutine : Boolean
}

Exercise --> MuscularGroup : muscle
ExerciseRutine --> Exercise : exercise
Rutine --> ExerciseRutine : exercises
TrainingExercise --> Exercise : exercise
TrainingExercise --> ExerciseSet : sets
Training --> TrainingExercise : exercises
Training --> Rutine : rutine

@enduml